maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:25: error: not found: value i
	i = i+1;
        ^Escaper:29: error: not found: type int
	var i:int = 0;
              ^Escaper:33: error: not found: value estfacemur
		if (estfacemur) {
                    ^